# nimu-ann

./: .gitignore  README.md
include/nimu/ann/: ann_static.hpp
test/: .gitignore  CMakeLists.txt  ann_static.cpp
